# SeisPolarity

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  MANIFEST.in  Methods Valid.ipynb  README.md  download.py  pyproject.toml
.github/workflows/: docs.yml
Pre-model/: train_app_scsn.py
Pre-model/global_datasets/: train_app_global.py  train_cfm_global.py  train_ditingmotion_global.py  train_eqpolarity_global.py  train_polarcap_global.py  train_ross_global.py  train_rpnet_global.py
Pre-model/own_datasets/: train_eqpolarity_txed.py
Pre-model/scsn_datasets/: train_app_scsn.py  train_cfm_scsn.py  train_diting_DitingScsn.py  train_eqpolarity_scsn.py  train_polarcap_scsn.py  train_ross_scsn.py  train_rpnet_scsn.py
data/Txed_Fune_Tune/: Fune_Tune_Txed_Labels.npy
datasets/Txed_Fune_Tune/: Fune_Tune_Txed_Waveforms.npy
docs/: .readthedocs.yaml  conf.py  index.md  requirements.txt
docs/_static/: custom.css
docs/_templates/: layout.html
docs/pages/: installation.md
examples/: datasets_api.ipynb  model_api.ipynb  predict_api.ipynb  train_api.ipynb
pretrained_model/Eqpolarity/: Eqpolarity_SCSN.txt
pretrained_model/Ross/: Ross_SCSN.txt
seispolarity/: __init__.py  config.py  inference.py
seispolarity/data/: __init__.py  base.py  pnw.py  (+6 more)
tests/: predict_diting_scsn.py  predict_eqpolarity_scsn.py  predict_ross_scsn.py  test_generate.py  train_app_scsn.py  train_cfm_scsn.py  train_diting_DitingScsn.py  train_diting_scsn.py  train_eqpolarity_scsn.py  train_polarcap_scsn.py  train_ross_instance.py  train_ross_pnw.py  train_ross_scsn.py  train_ross_scsn_unified.py  train_ross_txed.py  train_rpnet_scsn.py
(+55 files in other folders)
