[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seispolarity"
version = "0.1.1"
description = "Framework for seismic waveform polarity picking with unified APIs"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [{name = "Xingchen He"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.2",
    "obspy>=1.4",
    "torch>=2.1",
    "requests>=2.32",
    "huggingface-hub>=0.24",
    "modelscope>=1.0",
    "h5py>=3.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "pytest>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6",
    "black>=24.10",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinxcontrib-mermaid>=1.0",
    "zhdate>=0.1",
]
modelscope = [
    "modelscope>=1.0.0",
    "datasets>=3.0.0,<=3.6.0",
    "addict",
    "attrs",
    "einops",
    "oss2",
    "Pillow",
    "python-dateutil>=2.1",
    "simplejson>=3.3.0",
    "sortedcontainers>=1.5.9",
    "urllib3>=1.26",
]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.setuptools.packages.find]
include = ["seispolarity*"]
exclude = ["datasets*", "seisbench-main*", "pretrained_model*", "checkpoints_download*", "Model_Tensorflow_Hdf5*", "Polarity-model*", "Pre-model*", "docs*", "examples*"]

[tool.ruff]
target-version = ["py310"]
line-length = 100
select = ["E", "F", "I"]
